small change presentation workshop

--- a/codeCollation-unit2part2.html
+++ b/codeCollation-unit2part2.html
@@ -7,7 +7,7 @@
 		<title>Code and Collation workshop</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+		<link rel="stylesheet" href="css/theme/simple.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -85,9 +85,10 @@
 
 					<section>
 						<h2>Modularity</h2>
-						<p><strong>Michel 1982: </strong>Les progrès réalisés sont largement déterminés par la rigueur méthodologique des concepts que l'informatique impose à celui qui en use.</p>
+						<p><strong>Gilbert 1979: </strong>The COLLATE system is modular, i.e., it is composed of a series of programs each of which performs a simple procedure. Such an approach allows the editor to correct errors in the data as they are perceived. It also means that less time is spent waiting for computer resources to become available.</p>
 
-						<p><strong>Robinson 1989: </strong>Along the way, I learnt several computer languages and found myself re-thinking some of the fundamental notions of textual criticism.</p>
+						<p><strong>Waite 1979: </strong>... separating as much as possible the different steps in the program so that they can be altered independently to meet varying conditions.
+</p>
 					</section>
 
 					<section>
