--- a/labMonaci1-xmlTei.html
+++ b/labMonaci1-xmlTei.html
@@ -19,7 +19,7 @@
 		<title>Intro TEI</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+		<link rel="stylesheet" href="css/theme/solarized.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -39,22 +39,6 @@
 		
 				<section>
 					<h1>Intro TEI</h1>
-				</section>
-
-				<section>
-					<h2>From: </h2>
-					<div>
-						<a href="http://www.ifr.uni.wroc.pl/pl/nasz-instytut/pracownicy/dr-jose-luis-losada-palenzuela">José Luis Losada Palenzuela</a>,
-						<i>Markup, XML, TEI. Character, structure, guidelines</i>,
-						<a href="http://editio.github.io/slides/xml-tei">&lt;http://editio.github.io/slides/xml-tei&gt;</a>, 
-						2016.
-					</div>			 
-			 		<h2 id="filete">✽</h2>
-			 		<div>
-			 			<a href="http://creativecommons.org/licenses/by-sa/4.0/">
-			 				<img class="licencia" alt="License Creative Commons" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"/>
-			 			</a>
-			 		</div>	
 				</section>
 
 				<section>
@@ -123,21 +107,7 @@
 		
 				<section>
 					<h3>Content in the &lt;teiHeader&gt;</h3>
-					<pre><code><teiHeader>
-  						<fileDesc>
-							<titleStmt>
-								<title>Bym złożył sonet, Violente mię prosi</title>
-								<author>Lope de Vega Carpio</author>
-	 						</titleStmt>
-							<publicationStmt>
-								<publisher>Workshop's materials (Wrocław)</publisher>
-								<date>14/10/2016</date>
-	 						</publicationStmt>
-							<sourceDesc>
-								<bibl></bibl>
-	 						</sourceDesc>
-  						</fileDesc>		
-					</teiHeader></code></pre>
+					<p>vd. oXygen</p>
 				</section>
 		
 				<section>
@@ -160,18 +130,11 @@
 			
 				<section>
 					<h3>Content in the &lt;text&gt;</h3>
-					<pre><code style="font-size: 1.4em;"><text>
-    				&lt;body&gt;
-      				<div>
-         				&lt;head&gt;Do czytelnika&lt;/head&gt;
-         				<p>Ani sprawiedliwemu zasady, ani mądremu rady, chociaż nikt ich nie zna w stopniu dostatecznym dla siebie samego.</p>
-      				</div>
-    				&lt;/body&gt;
- 					</text></code></pre>
+					<p>vd. oXygen</p>
 				</section>
 
 				<section>
-					<a href="http://wiki.tei-c.org/index.php/OXygen" target="_blank"><h2>oXygen: XML editor with support for TEI encoding</h2></a>
+					<a href="http://wiki.tei-c.org/index.php/OXygen" target="_blank"><h2>oXygen</h2></a><p>XML editor with support for TEI encoding</p>
 				</section>
 
 				<section>
@@ -185,7 +148,21 @@
 				<!-- carrellata di elementi
 						forse Roma: customizing the TEI, vd slides Jose -->
 			
-
+				<section>
+					<h2>From: </h2>
+					<div>
+						<a href="http://www.ifr.uni.wroc.pl/pl/nasz-instytut/pracownicy/dr-jose-luis-losada-palenzuela">José Luis Losada Palenzuela</a>,
+						<i>Markup, XML, TEI. Character, structure, guidelines</i>,
+						<a href="http://editio.github.io/slides/xml-tei">&lt;http://editio.github.io/slides/xml-tei&gt;</a>, 
+						2016.
+					</div>			 
+			 		<h2 id="filete">✽</h2>
+			 		<div>
+			 			<a href="http://creativecommons.org/licenses/by-sa/4.0/">
+			 				<img class="licencia" alt="License Creative Commons" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"/>
+			 			</a>
+			 		</div>	
+				</section>
 
 				<section id="impressum">	
 			 		<div><a href="http://elenaspadini.com">Elena Spadini</a>, <i>Intro TEI</i>, <a href="https://elespdn.github.io/labMonaci1-xmlTei.html#/">&lt;https://elespdn.github.io/labMonaci1-xmlTei.html#/&gt;</a>, 2016.</div>
