--- a/labMonaci1-xmlTei.html
+++ b/labMonaci1-xmlTei.html
@@ -107,7 +107,7 @@
 		
 				<section>
 					<h3>Content in the &lt;teiHeader&gt;</h3>
-					<p>vd. oXygen</p>
+					<p>see <a href="https://github.com/elespdn/laboratorio-monaci/blob/master/lezione1/basicTEI.xml" target="_blank">basic example</a></p>
 				</section>
 		
 				<section>
@@ -130,7 +130,7 @@
 			
 				<section>
 					<h3>Content in the &lt;text&gt;</h3>
-					<p>vd. oXygen</p>
+					<p>see <a href="https://github.com/elespdn/laboratorio-monaci/blob/master/lezione1/basicTEI.xml" target="_blank">basic example</a></p>
 				</section>
 
 				<section>
@@ -145,23 +145,26 @@
 					<a href="http://www.tei-c.org/Roma/startroma.php?mode=main"><h2>TEI modules</h2></a>
 				</section>
 
-				<!-- carrellata di elementi
-						forse Roma: customizing the TEI, vd slides Jose -->
+				<section>
+					<p><i>Materials from Digital Humanities Oxford Summer School 2015 (L. Burnard, M. Turska, E. Spadini, M. Broughton)</i></p>
+					<h3>TEI Basic Structure and Core Elements</h3>
+					<p>See <a href="http://tei.it.ox.ac.uk/Talks/2015-07-dhoxss/2-teibasic.pdf" target="_blank">presentation</a></p>
+					<h3>Transcription, Editorial Interventions and Critical Apparatus</h3>
+					<p>See <a href="http://tei.it.ox.ac.uk/Talks/2015-07-dhoxss/Talks/3-transcription-and-criticapp.pdf" target="_blank">presentation</a></p>
+					<h3>Encoding Names, People, Places and Dates</h3>
+					<p>See <a href="http://tei.it.ox.ac.uk/Talks/2015-07-dhoxss/Talks/4-name-place-date.pdf" target="_blank">presentation</a></p>
+
+
+				</section>
 			
 				<section>
-					<h2>From: </h2>
+					<h4>This presentation reuses materials from: </h4>
 					<div>
 						<a href="http://www.ifr.uni.wroc.pl/pl/nasz-instytut/pracownicy/dr-jose-luis-losada-palenzuela">José Luis Losada Palenzuela</a>,
 						<i>Markup, XML, TEI. Character, structure, guidelines</i>,
 						<a href="http://editio.github.io/slides/xml-tei">&lt;http://editio.github.io/slides/xml-tei&gt;</a>, 
 						2016.
-					</div>			 
-			 		<h2 id="filete">✽</h2>
-			 		<div>
-			 			<a href="http://creativecommons.org/licenses/by-sa/4.0/">
-			 				<img class="licencia" alt="License Creative Commons" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"/>
-			 			</a>
-			 		</div>	
+					</div>
 				</section>
 
 				<section id="impressum">	
