--- a/labMonaci1-xmlTei.html
+++ b/labMonaci1-xmlTei.html
@@ -19,7 +19,7 @@
 		<title>Intro TEI</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/solarized.css">
+		<link rel="stylesheet" href="css/theme/serif.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
