--- a/hopscotch/index.html
+++ b/hopscotch/index.html
@@ -1,15 +1,30 @@
 <html>
     <head>
-        <title>My First Hopscotch Tour</title>
+        <title>Test Hopscotch</title>
         <link rel="stylesheet" href="css/hopscotch.css"></link>
     </head>
     <body>
-        <div style="margin: 100px">
-        <h1 id="header">My First Hopscotch Tour</h1>
+        <div style="margin: 30px">
+        
+        <h1 id="header">Demo of a Digital Library: Manoscritti pisano-genovesi</h1>
+        
         <div id="content">
-            <p>Content goes here...</p>
+            <img style="padding-left:30%" src="img/demo/navi-9603.png" width="40%" />
         </div>
+
+        <div>
+            <ul style="margin-top: 70px; font-size: 1.5em">
+                <li><a href="mss.html">Manoscritti</a></li>
+                <li><a href="text.html">Testi</a></li>
+                <li><a href="#">Miniature</a></li>
+            </ul>
         </div>
+
+        </div>
+
+
+
+
         <script src="js/hopscotch.js"></script>
         <script src="js/my_tour.js"></script> <!-- define and start your tour in this file -->
     </body>
