tour multiple pages

--- a/hopscotch/text.html
+++ b/hopscotch/text.html
@@ -28,6 +28,6 @@
 
 
         <script src="js/hopscotch.js"></script>
-        <script src="js/my_tour_text.js"></script> <!-- define and start your tour in this file -->
+        <script src="js/my_tour.js"></script> <!-- define and start your tour in this file -->
     </body>
 </html>
