--- a/hopscotch/mss.html
+++ b/hopscotch/mss.html
@@ -86,6 +86,6 @@
 
 
         <script src="js/hopscotch.js"></script>
-        <script src="js/my_tour_mss.js"></script> <!-- define and start your tour in this file -->
+        <script src="js/my_tour.js"></script> <!-- define and start your tour in this file -->
     </body>
 </html>
