fix links and simple homepage

--- a/talks/index.html
+++ b/talks/index.html
@@ -28,6 +28,8 @@
 			<ul>
 				<li><a href="labMonaci1-xmlTei.html">Intro TEI</a></li>
 			</ul>
+
+			<p>More talks at <a href="http://elenaspadini.com/presentations.html">elenaspadini.com</a></p>
 		</div>
 	</body>
 </html>
