--- a/LabMonaciWeb/index.html
+++ b/LabMonaciWeb/index.html
@@ -115,14 +115,19 @@
                 <div id="storia" class="section">
                     <h2>Storia della filologia romanza</h2>
                     
-                    <div class="row"> <!-- first row -->
-                        <div class="col-md-6">
+                    <ul>
+                        <li>
+                        <br/>
+                        <div>
                             <h4>I protagonisti. Gli allievi e i maestri</h4>
                             <a href="tree.html" target="_blank">
-                                <img src="images/tree.png" width="90%">
+                                <img src="images/tree.png" width="50%">
                             </a>
                         </div>
-                        <div class="col-md-6">
+                        </li>
+                        <br/>
+                        <li>
+                        <div>
                             <h4>Le Riviste</h4>
                             <p>Cronologia delle più antiche riviste europee dedicate alla romanistica (dal 1870 alla fine del secolo). Vd. Ruggieri 1969.</p>
                             <ul>
@@ -134,11 +139,13 @@
                                 <li>1881 Romanische Forschungen di Vollmöller </li>
                                 <li>1883 Giornale Storico della Letteratura Italiana di Graf, Renier e poi di Navati </li>
                             </ul>
+                            <br/>
                             <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1d7qAYxmyriFIxohIEYWpzK2ne8Y6kc6uBtbSNoyAX2U&font=Default&lang=it&initial_zoom=9&start_at_slide=1&height=650" target="_blank">
                                 <button class="btn btn-primary">Vd. timeline</button>
                             </a>
                         </div>
-                    </div> <!-- end first row -->
+                        </li>
+                    </div>
                 </div>
                 <hr />
                 <div id="biblio" class="section">
@@ -198,7 +205,8 @@
                     <h2>Contatti</h2>
                     <p>Per informazioni riguardanti il Laboratorio Monaci, contattare
                     <br/>Nadia Cannata  nadia.cannata@uniroma1.it
-                    <br/>Arianna Punzi  arianna.punzi@uniroma1.it</p>
+                    <br/>Arianna Punzi  arianna.punzi@uniroma1.it
+                    <br/>Elena Spadini  elena.spadini@huygens.knaw.nl</p>
                 </div>
             </div>
             <!-- fine div che contiene tutto il testo -->
