--- a/LabMonaciWeb/editio.html
+++ b/LabMonaciWeb/editio.html
@@ -21,7 +21,7 @@
         <![endif]-->
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: darkgreen">
             <!-- CHISSà PERCHE CREA PROBLEMI CON QUEST'ALTRA CLASSE, CHE PERO C'è IN TUTTI GLI ESEMPI E PURE NEL MIO SITO: navbar-fixed-top -->
             <div class="container">
                 <!-- <div class="navbar-header">
