--- a/LabMonaciWeb/index.html
+++ b/LabMonaciWeb/index.html
@@ -97,11 +97,11 @@
                                 target="_blank">
                                 <img class="quadro" src="images/mapSmall.png"/>
                             </a>
-                            <p>I corrispondenti nello spazio</p>
+                            <p class="caption">I corrispondenti nello spazio</p>
                         </div>
                         <div class="col-md-6">
                             <img class="quadro" src="images/timelineRiviste.png"/>
-                            <p>I corrispondenti nel tempo</p>
+                            <p class="caption">I corrispondenti nel tempo</p>
                         </div>
                     </div>
                     <div style="text-align: center">
@@ -116,8 +116,8 @@
                     <h2>Storia della filologia romanza</h2>
                     
                     <ul>
-                        <li>
                         <br/>
+                        <li>
                         <div>
                             <h4>I protagonisti. Gli allievi e i maestri</h4>
                             <a href="tree.html" target="_blank">
