small changes e iframe per mappa

--- a/LabMonaciWeb/index.html
+++ b/LabMonaciWeb/index.html
@@ -120,7 +120,7 @@
                         <li>
                         <div>
                             <h4>I protagonisti. Gli allievi e i maestri</h4>
-                            <a href="tree.html" target="_blank">
+                            <a href="tree.html">
                                 <img src="images/tree.png" width="50%">
                             </a>
                         </div>
@@ -140,7 +140,7 @@
                                 <li>1883 Giornale Storico della Letteratura Italiana di Graf, Renier e poi di Navati </li>
                             </ul>
                             <br/>
-                            <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1d7qAYxmyriFIxohIEYWpzK2ne8Y6kc6uBtbSNoyAX2U&font=Default&lang=it&initial_zoom=9&start_at_slide=1&height=650" target="_blank">
+                            <a href="riviste.html">
                                 <button class="btn btn-primary">Vd. timeline</button>
                             </a>
                         </div>
@@ -173,7 +173,7 @@
                         <h4>Pubblicazioni e partecipazioni a convegni</h4>
                         <ul>
                             <li>Vincenzo D'Angelo, “Note linguistiche sui carteggi accademici di Ernesto Monaci”, in <i>Studj romanzi</i> IX (2013). [leggi]</li>
-                            <li>Arianna Punzi, "«Non ebbi la ventura di essere suo discepolo». Lettere di Luigi Schiaparelli a Ernesto Monaci", in <i>Studj romanzi</i> X (2014). []</li>
+                            <li>Arianna Punzi, "«Non ebbi la ventura di essere suo discepolo». Lettere di Luigi Schiaparelli a Ernesto Monaci", in <i>Studj romanzi</i> X (2014). [leggi]</li>
                             <li>Marco Veneziale, <i>Progetto Archivio Monaci</i>, Presentazione di progetti di ricerca in corso (Verona, 13 settembre 2014), Società Italiana di Filologia Romanza [<a href="http://www.sifr.it/ricerca/archivio_monaci.pdf">leggi</a>]</li>
                             <li>Marco Veneziale, "Novità dall'Archivio Mussafia", CILFR 2016. [<a href="http://cilfr2016.let.uniroma1.it/node/26">pagina convegno</a>]</li>
                         </ul>
