--- a/LabMonaciWeb/editio.html
+++ b/LabMonaciWeb/editio.html
@@ -52,7 +52,7 @@
             </div>
         </nav>
         <div class="container" role="main">
-            <div class="jumbotron" style="background-color: darkseagreen">
+            <div class="jumbotron" style="background-color: lightcoral">
                 <h1><a href="index.html" style="text-decoration: none; color: inherit;">Laboratorio Monaci</a></h1>
                 <p>Edizione dei carteggi</p>
             </div>
@@ -60,7 +60,7 @@
                 
                 <div class="section">
                     <h2>1872-1876. La Rivista di Filologia Romanza</h2>
-                    <p>L'edizione dei carteggi conservati nel Fondo Monaci comincia con le lettere riguardanti la Rivista di filologia romanza.</p>
+                    <p>L'edizione dei carteggi conservati nel Fondo Monaci avrà inizio con le lettere riguardanti la Rivista di filologia romanza.</p>
                     <p>La fondazione, insieme a Edmund Stengel e a Luigi Manzoni, della Rivista, è occasione per Monaci di ravvivare i contatti con i suoi corrispondenti e di stringerne di nuovi. Le prime lettere, ad esempio, con Paul Meyer, Adolpho Coelho, Teophilo Braga, Giuseppe Pitré datano di questo periodo.</p>
                     <p>Della Rivista di filologia romanza usciranno solo due numeri, divisi in quattro fascicoli, irregolarmente, dal 1872 al 1876. Delle difficoltà editoriali, e finanche tipografiche (uno dei ritardi è ad esempio causato dalla difficile reperibilità di caratteri per la stampa dei testi del canzoniere portoghese), si trova testimonianza nelle lettere, sia con i connazionali, sia con gli stranieri. </p>
                     <p>Nelle lettere di questi anni che riguardano la Rivista si tratta della preparazione di pubblicazioni (come l'attesa edizione del Codice portoghese della Vaticana), di codici e testi salvati dall'oblio (un testimone del Roman d'Alexandre per Meyer, notizie del codice Vallicelliano per Ascoli), di questioni scientifiche (come l'origine della lirica romanza), dell'evoluzione della disciplina nei rispettivi paesi (almeno in Francia, Portogallo e Italia), della difficoltà di insegnare, per primi, una disciplina nuova (vd. la lettera del 23 gennaio 1873 di Rajna a Monaci). Emerge insomma la situazione nella quale vedono la luce le prime riviste di filologia romanza: si ricordi che il primo numero della Romania è dello stesso 1872.<br/>Non sono assenti neppure le questioni personali: i trasferimenti, i lutti, le preoccupazioni, la salute. La rete scientifica si fà così anche rete umana.</p>
