--- a/LabMonaciWeb/index.html
+++ b/LabMonaciWeb/index.html
@@ -35,20 +35,25 @@
                     </div> -->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#carteggi">Carteggi</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#carteggi">Carteggi</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Edizione dei carteggi</li>
+                                <li><a href="editio.html">1872-1876. La Rivista di Filologia Romanza</a></li>
+                                <li><a href="editio.html#proto">Prototipo</a></li>
+                                <li><a href="editio.html#trascrizione">Criteri di trascrizione</a></li>
+                                <li><a href="editio.html#codifica">Criteri di codifica</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#storia">Storia della filologia romanza</a></li>
                         <li><a href="#biblio">Bibliografia</a></li>
                         <li><a href="#about">Attività, pubblicazioni e credits</a></li>
-                        <!--
-                        <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                        <li><a href="#">Edizione dei carteggi</a></li>
-                                </ul>
-                          </li> -->
                     </ul>
                 </div><!--/.nav-collapse -->
+
             </div>
         </nav>
         <div class="container" role="main">
@@ -93,8 +98,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <a
-                                href="https://www.doogal.co.uk/KmlViewer.php?url=http://www.doogal.co.uk/GeocodedKml/b0886644-5f2d-4bbf-814c-bd78d9075230.kml"
-                                target="_blank">
+                                href="map.html">
                                 <img class="quadro" src="images/mapSmall.png"/>
                             </a>
                             <p class="caption">I corrispondenti nello spazio</p>
