--- a/LabMonaciWeb/map.html
+++ b/LabMonaciWeb/map.html
@@ -36,8 +36,8 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="index.html#carteggi">Carteggi</a></li>
-                        <li><a href="index.html#storia">Storia della filologia romanza</a></li>
+                        <li><a href="index.html#carteggi">Carteggi</a></li>
+                        <li class="active"><a href="index.html#storia">Storia della filologia romanza</a></li>
                         <li><a href="index.html#biblio">Bibliografia</a></li>
                         <li><a href="index.html#about">Attività, pubblicazioni e credits</a></li>
                         <!--
