fix menu nelle pagine

--- a/laboratoriomonaciweb/editio.html
+++ b/laboratoriomonaciweb/editio.html
@@ -33,15 +33,15 @@
                                 <li><a href="index.html#carteggi">Carteggi</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Edizione dei carteggi</li>
-                                <li><a href="editio.html">1872-1876. La Rivista di Filologia Romanza</a></li>
-                                <li><a href="editio.html#proto">Prototipo</a></li>
-                                <li><a href="editio.html#trascrizione">Criteri di trascrizione</a></li>
-                                <li><a href="editio.html#codifica">Criteri di codifica</a></li>
+                                <li><a href="#">1872-1876. La Rivista di Filologia Romanza</a></li>
+                                <li><a href="#proto">Prototipo</a></li>
+                                <li><a href="#trascrizione">Criteri di trascrizione</a></li>
+                                <li><a href="#codifica">Criteri di codifica</a></li>
                             </ul>
                         </li>
                         <li><a href="index.html#storia">Storia della filologia romanza</a></li>
                         <li><a href="index.html#biblio">Bibliografia</a></li>
-                        <li><a href="index.html#about">Attività, pubblicazioni e credits</a></li>
+                        <li><a href="index.html#about">Attività, pubblicazioni e contatti</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
 
