--- a/laboratoriomonaciweb/index.html
+++ b/laboratoriomonaciweb/index.html
@@ -50,7 +50,7 @@
                         </li>
                         <li><a href="#storia">Storia della filologia romanza</a></li>
                         <li><a href="#biblio">Bibliografia</a></li>
-                        <li><a href="#about">Attività, pubblicazioni e credits</a></li>
+                        <li><a href="#about">Attività, pubblicazioni e contatti</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
 
