--- a/laboratoriomonaciweb/map.html
+++ b/laboratoriomonaciweb/map.html
@@ -23,32 +23,27 @@
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <!-- CHISSà PERCHE CREA PROBLEMI CON QUEST'ALTRA CLASSE, CHE PERO C'è IN TUTTI GLI ESEMPI E PURE NEL MIO SITO: navbar-fixed-top -->
-            <div class="container">
-                <!-- <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">Lab Monaci</a>
-                    </div> -->
-                <div id="navbar" class="navbar-collapse collapse">
+            <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#carteggi">Carteggi</a></li>
-                        <li class="active"><a href="index.html#storia">Storia della filologia romanza</a></li>
+                        <li class="active" class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="index.html#carteggi">Carteggi</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Edizione dei carteggi</li>
+                                <li><a href="editio.html">1872-1876. La Rivista di Filologia Romanza</a></li>
+                                <li><a href="editio.html#proto">Prototipo</a></li>
+                                <li><a href="editio.html#trascrizione">Criteri di trascrizione</a></li>
+                                <li><a href="editio.html#codifica">Criteri di codifica</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="index.html#storia">Storia della filologia romanza</a></li>
                         <li><a href="index.html#biblio">Bibliografia</a></li>
-                        <li><a href="index.html#about">Attività, pubblicazioni e credits</a></li>
-                        <!--
-                        <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                        <li><a href="#">Edizione dei carteggi</a></li>
-                                </ul>
-                          </li> -->
+                        <li><a href="index.html#about">Attività, pubblicazioni e contatti</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
+            
             </div>
         </nav>
         <div class="container" style="margin-top: 5%">
