cambio menu - navigazione

--- a/laboratoriomonaciweb/index.html
+++ b/laboratoriomonaciweb/index.html
@@ -24,32 +24,26 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <!-- CHISSà PERCHE CREA PROBLEMI CON QUEST'ALTRA CLASSE, CHE PERO C'è IN TUTTI GLI ESEMPI E PURE NEL MIO SITO: navbar-fixed-top -->
             <div class="container">
-                <!-- <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">Lab Monaci</a>
-                    </div> -->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#carteggi">Carteggi</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Edizione dei carteggi</li>
-                                <li><a href="editio.html">1872-1876. La Rivista di Filologia Romanza</a></li>
+                                <li><a href="editio.html">Epistolario 1872-1876. La <i>Rivista di Filologia Romanza</i></a></li>
+                                <li><a href="editio.html#carteggi">I corrispondenti</a></li>
                                 <li><a href="editio.html#proto">Prototipo</a></li>
                                 <li><a href="editio.html#trascrizione">Criteri di trascrizione</a></li>
                                 <li><a href="editio.html#codifica">Criteri di codifica</a></li>
                             </ul>
                         </li>
-                        <li><a href="#storia">Storia della filologia romanza</a></li>
-                        <li><a href="#biblio">Bibliografia</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Materiali <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="index.html#storia">Storia della filologia romanza</a></li>
+                                <li><a href="index.html#biblio">Bibliografia</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#about">Attività, pubblicazioni e contatti</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -86,38 +80,10 @@
                             >Dottorato di ricerca in Scienze del Testo</a> dell'<a
                             href="http://www.uniroma1.it/">Università Sapienza</a>.</p>
                 </div>
-                <hr />
-                <div id="carteggi" class="section">
-                    <h2>Carteggi</h2>
-                    <p>I corrispondenti di Ernesto Monaci sono 1400 (Calzolari 2005). Tra di essi vi
-                        sono le figure di spicco del panorama culturale nazionale e internazionale
-                        dell'epoca; solo per citarne alcuni, si pensi a Ascoli, D'Ancona, Rajna,
-                        D'Ovidio, Canello, Zambrini, Mussafia, Meyer, Foerster, Bartsch, Meyer
-                        Lübke.</p>  
-                        <br/>       
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a
-                                href="map.html">
-                                <img class="quadro" src="images/mapSmall.png"/>
-                            </a>
-                            <p class="caption">I corrispondenti nello spazio</p>
-                        </div>
-                        <div class="col-md-6">
-                            <img class="quadro" src="images/timelineRiviste.png"/>
-                            <p class="caption">I corrispondenti nel tempo</p>
-                        </div>
-                    </div>
-                    <div style="text-align: center">
-                        <br/><br/>
-                        <a href="editio.html">
-                            <button class="btn btn-primary">Vai all'edizione dei carteggi</button>
-                        </a>
-                    </div>
-                </div>
+                <div class="guardagiu">&#129171;</div>
                 <hr />
                 <div id="storia" class="section">
-                    <h2>Storia della filologia romanza</h2>
+                    <h2>Appunti di storia della filologia romanza</h2>
                     
                     <ul>
                         <br/>
@@ -209,8 +175,7 @@
                     <h2>Contatti</h2>
                     <p>Per informazioni riguardanti il Laboratorio Monaci, contattare
                     <br/>Nadia Cannata  nadia.cannata@uniroma1.it
-                    <br/>Arianna Punzi  arianna.punzi@uniroma1.it
-                    <br/>Elena Spadini  elena.spadini@huygens.knaw.nl</p>
+                    <br/>Arianna Punzi  arianna.punzi@uniroma1.it</p>
                 </div>
             </div>
             <!-- fine div che contiene tutto il testo -->
