--- a/laboratoriomonaciweb/tree.html
+++ b/laboratoriomonaciweb/tree.html
@@ -26,21 +26,24 @@
             <div class="container">
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="active" class="dropdown">
+                        <li><a href="#">Home</a></li>
+                        <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="index.html#carteggi">Carteggi</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Edizione dei carteggi</li>
-                                <li><a href="editio.html">1872-1876. La Rivista di Filologia Romanza</a></li>
+                                <li><a href="editio.html">Epistolario 1872-1876. La <i>Rivista di Filologia Romanza</i></a></li>
+                                <li><a href="editio.html#carteggi">I corrispondenti</a></li>
                                 <li><a href="editio.html#proto">Prototipo</a></li>
                                 <li><a href="editio.html#trascrizione">Criteri di trascrizione</a></li>
                                 <li><a href="editio.html#codifica">Criteri di codifica</a></li>
                             </ul>
                         </li>
-                        <li><a href="index.html#storia">Storia della filologia romanza</a></li>
-                        <li><a href="index.html#biblio">Bibliografia</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Materiali <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="index.html#storia">Storia della filologia romanza</a></li>
+                                <li><a href="index.html#biblio">Bibliografia</a></li>
+                            </ul>
+                        </li>
                         <li><a href="index.html#about">Attività, pubblicazioni e contatti</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
