--- a/laboratoriomonaciweb/map.html
+++ b/laboratoriomonaciweb/map.html
@@ -25,7 +25,7 @@
             <!-- CHISSà PERCHE CREA PROBLEMI CON QUEST'ALTRA CLASSE, CHE PERO C'è IN TUTTI GLI ESEMPI E PURE NEL MIO SITO: navbar-fixed-top -->
             <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
                             <ul class="dropdown-menu">
