small change in editio.html

--- a/laboratoriomonaciweb/editio.html
+++ b/laboratoriomonaciweb/editio.html
@@ -61,12 +61,12 @@
                 
                 <div class="section">
                     <h2>1872-1876. La <i>Rivista di Filologia Romanza</i></h2>
-                    <p>L'edizione dei carteggi conservati nel Fondo Monaci avrà inizio con le lettere riguardanti la <i>Rivista di Filologia Romanza</i>.</p>
+                    <p>L'analisi dei carteggi conservati nel Fondo Monaci si è concentrata ultimamente sulle lettere riguardanti la <i>Rivista di Filologia Romanza</i>.</p>
                     <p>La fondazione, insieme a Edmund Stengel e a Luigi Manzoni, della <i>Rivista</i>, è occasione per Monaci di ravvivare i contatti con i suoi corrispondenti e di stringerne di nuovi. Le prime lettere, ad esempio, con Paul Meyer, Adolpho Coelho, Teophilo Braga, Giuseppe Pitré datano di questo periodo.</p>
                     <p>Della <i>Rivista di filologia romanza</i> usciranno solo due numeri, divisi in quattro fascicoli, irregolarmente, dal 1872 al 1876. Delle difficoltà editoriali, e finanche tipografiche (uno dei ritardi è ad esempio causato dalla difficile reperibilità di caratteri per la stampa dei testi del canzoniere portoghese), si trova testimonianza nelle lettere, sia con i connazionali, sia con gli stranieri. </p>
                     <p>Nelle lettere di questi anni che riguardano la <i>Rivista</i> si tratta della preparazione di pubblicazioni (come l'attesa edizione del Codice portoghese della Vaticana), di codici e testi salvati dall'oblio (ad esempio un testimone del <i>Roman d'Alexandre</i> per Meyer, notizie del codice Vallicelliano per Ascoli), di questioni scientifiche (come l'origine della lirica romanza), dell'evoluzione della disciplina nei rispettivi paesi, della difficoltà di insegnare, per primi, una disciplina nuova (vd. la lettera del 23 gennaio 1873 di Rajna a Monaci). Emerge quindi la situazione nella quale vedono la luce le prime riviste di filologia romanza: si ricordi che il primo numero della <i>Romania</i> è dello stesso 1872.<br/>Non sono assenti neppure le questioni personali: i trasferimenti, i lutti, le preoccupazioni, la salute. La rete scientifica si fà così anche rete umana.</p>
 
-                    <p>Carteggi selezionati (1872-1876), edizione in corso:
+                    <p>Carteggi selezionati (1872-1876), analisi in corso:
                         <ul>
                             <li>Braga</li>
                             <li>Canello</li>
