add link to CollateX in context talk

--- a/laboratoriomonaciweb/editio.html
+++ b/laboratoriomonaciweb/editio.html
@@ -143,16 +143,17 @@
 
                 <div id="trascrizione" class="section">
                     <h2>Criteri di trascrizione</h2>
-                    <h4> ... in progress ... </h4>
                     <p>La trascrizione tiene conto delle caratteristiche grafiche degli originali, senza apportare normalizzazioni e modernizzazioni. In caso di errori evidenti essi saranno corretti e segnalati.</p>
-                    <p>La mise en page degli originali non è riprodotta, ma se ne dà conto quando presenta caratteristiche fuori dall'ordinario (cambiamento della direzione di scrittura, immagini, etc.). I salti di linea (non i paragrafi, ma i normali a capo) sono riprodotti fedelmente come nell'originale solo nel caso di citazioni all'interno delle lettere.</p>
+                    <p>La mise en page degli originali non è riprodotta, ma se ne dà conto quando presenta caratteristiche fuori dall'ordinario (cambiamento della direzione di scrittura, immagini, etc.). I salti di linea (non i paragrafi, ma i normali a capo) sono riprodotti fedelmente come nell'originale solo nel caso di citazioni di versi e di trascrizioni di manoscritti all'interno delle lettere.</p>
+                    <p>Le abbreviazioni. Non si marcano quelle di uso comune e di uso comune nel corpus e caratteristiche della materia. Si marcano quelle asistematiche e i nomi propri.</p>
+                    <p>Letture non certe e correzioni saranno segnalate in note.</p>
+                    <!--- segnature dei ms vanno marcate; alcune normalizzazioni, tipo provincie -->
                 </div>
 
                 <hr/>
 
                 <div id="codifica" class="section">
                     <h2>Criteri di codifica</h2>
-                    <h4> ... in progress ... </h4>
                 </div>
                
             </div>
