--- a/talks/codeCollation-unit2part2.html
+++ b/talks/codeCollation-unit2part2.html
@@ -25,6 +25,12 @@
 		<div class="reveal">
 			<div class="slides">
 
+				<section>
+					<h1>CollateX in context</h1>
+				</section>
+
+				<section>A complete version of this talk is available <a href="http://nbviewer.jupyter.org/github/DiXiT-eu/collatex-tutorial/blob/master/unit2/part2-collatex-in-context/CollateX-in-context.ipynb">on the GitHub repository</a> of the DiXiT Workshop <a href="https://sites.google.com/site/dixitcodingcollation/">'Code and Collation. Training Textual Scholars'</a></section>
+
 				<section id="part1">
 
 					<section>
