talk AIUCD 2017 DiXiT Workshop

--- a/talks/index.html
+++ b/talks/index.html
@@ -20,13 +20,15 @@
 			<ul>
 				<li><a href="aiucd2016.html">Aiucd 2016</a></li>
 				<li><a href="ests2016.html">Ests 2016</a></li>
+				<li><a href="dixitdidacticRome2017.html">Aiucd 2017</a></li>
 			</ul>
 
 			<hr/>
 
-			<h2>Course</h2>
+			<h2>Courses and workshops</h2>
 			<ul>
-				<li><a href="labMonaci1-xmlTei.html">Intro TEI</a></li>
+				<li><a href="labMonaci1-xmlTei.html">Intro TEI</a></li>				
+				<li><a href="codeCollation-unit2part2.html#/">Code and Collation workshop</a></li>
 			</ul>
 
 			<p>More talks at <a href="http://elenaspadini.com/presentations.html">elenaspadini.com</a></p>
