--- a/laboratoriomonaciweb/tree.html
+++ b/laboratoriomonaciweb/tree.html
@@ -30,7 +30,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Carteggi <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="editio.html">Epistolario 1872-1876. La <i>Rivista di Filologia Romanza</i></a></li>
+                                <li><a href="editio.html">Selezione di carteggi</a></li>
                                 <li><a href="editio.html#carteggi">I corrispondenti</a></li>
                                 <li><a href="editio.html#proto">Prototipo</a></li>
                                 <li><a href="editio.html#trascrizione">Criteri di trascrizione</a></li>
