small changes esu 2017

--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -63,23 +63,23 @@
 						<h2>1. Context</h2>
 					</section>
 
-					<section data-background-image="img/esu2017/tradizione.jpg" data-background-size="contain">
+					<section data-background-image="images/esu2017/tradizione.jpg" data-background-size="contain">
 					</section>
 
 					<section>
-						<img src="img/esu2017/edPetrocchi.jpg">
+						<img src="images/esu2017/edPetrocchi.jpg">
 					</section>
 
-					<section data-background-image="img/esu2017/tradizione.jpg" data-background-size="contain">
+					<section data-background-image="images/esu2017/tradizione.jpg" data-background-size="contain">
 					</section>
 
 					<section>
-						<img src="img/esu2017/bocc.jpg">
+						<img src="images/esu2017/bocc.jpg">
 						<p>Giovanni Boccaccio (1313-1375)</p>
 					</section>
 
 					<section>
-						<img src="img/esu2017/bocc.jpg"/>
+						<img src="images/esu2017/bocc.jpg"/>
 						<br/>
 						<ul>
 							<li>Toledano 104.6</li>
@@ -88,10 +88,10 @@
 						</ul>
 					</section>
 
-					<section data-background-image="img/esu2017/tradizione-tagliata.jpg" data-background-size="contain">
+					<section data-background-image="images/esu2017/tradizione-tagliata.jpg" data-background-size="contain">
 					</section>
 
-					<section data-background-image="img/esu2017/tradizione-esempio.jpg" data-background-size="contain">
+					<section data-background-image="images/esu2017/tradizione-esempio.jpg" data-background-size="contain">
 						<br/>
 						<p>Ma s'a conoscer la prima radice<br/>
 						del nostro <span style="background-color: yellow;color: black"> amor </span> tu hai cotanto affetto,<br/>
@@ -111,10 +111,10 @@
 						<p style="text-align: right">Inf V, 124-129</p>
 					</section>
 
-					<section data-background-image="img/esu2017/tradizione-antica-vulgata.jpg" data-background-size="contain">
+					<section data-background-image="images/esu2017/tradizione-antica-vulgata.jpg" data-background-size="contain">
 					</section>
 
-					<section data-background-image="img/esu2017/tradizione-petrocchi.jpg" data-background-size="contain">
+					<section data-background-image="images/esu2017/tradizione-petrocchi.jpg" data-background-size="contain">
 					</section>
 
 
@@ -132,49 +132,49 @@
 					</section>
 
 					<section>
-						<img src="img/esu2017/websitehome.png"/>
+						<img src="images/esu2017/websitehome.png"/>
 					</section>
 
 					<section>
-						<iframe width="100%" height="600px" data-src="img/esu2017/table01.html"></iframe>
+						<iframe width="100%" height="600px" data-src="images/esu2017/table01.html"></iframe>
 					</section>
 
 					<section>
-						<iframe width="100%" height="600px" data-src="img/esu2017/table02.html"></iframe>
+						<iframe width="100%" height="600px" data-src="images/esu2017/table02.html"></iframe>
 					</section>
 
 					<section>
-						<iframe width="100%" height="600px" data-src="img/esu2017/table03.html"></iframe>
+						<iframe width="100%" height="600px" data-src="images/esu2017/table03.html"></iframe>
 					</section>
 
 					<section>
-						<img src="img/esu2017/bocc-conceptual-color10.png"/>
+						<img src="images/esu2017/bocc-conceptual-color10.png"/>
 					</section>
 
 					<section>
-						<img src="img/esu2017/table-presente.png"/>
+						<img src="images/esu2017/table-presente.png"/>
 					</section>
 
 					<section>
-						<img src="img/esu2017/bocc-conceptual-color11.png"/>
+						<img src="images/esu2017/bocc-conceptual-color11.png"/>
 					</section>
 
 					<section>
-						<iframe width="100%" height="300px" data-src="img/esu2017/table02.html"></iframe>
+						<iframe width="100%" height="300px" data-src="images/esu2017/table02.html"></iframe>
 						<p>susbstitution | addition | morphological<br/>?</p>
 					</section>
 
 					<section>
-						<img src="img/esu2017/bocc-conceptual-color01.png"/>
+						<img src="images/esu2017/bocc-conceptual-color01.png"/>
 					</section>
 
 					<section>
-						<iframe width="100%" height="300px" data-src="img/esu2017/table02.html"></iframe>
+						<iframe width="100%" height="300px" data-src="images/esu2017/table02.html"></iframe>
 						<p>omission | addition | substitution<br/>?</p>
 					</section>
 
 					<section>
-						<img src="img/esu2017/bocc-conceptual-color02.png"/>
+						<img src="images/esu2017/bocc-conceptual-color02.png"/>
 					</section>
 
 					<section>
@@ -197,24 +197,24 @@
 					</section>
 
 					<section>
-						<img src="img/esu2017/bocc-conceptual-color03.png"/>
+						<img src="images/esu2017/bocc-conceptual-color03.png"/>
 					</section>
 
-					<section data-background-image="img/esu2017/bocc-conceptual-color-completo.png" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/bocc-conceptual-color-completo.png" data-background-size="contain"/>
 					</section>
 
-					<section data-background-image="img/esu2017/bocc-conceptual-color-echo.png" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/bocc-conceptual-color-echo.png" data-background-size="contain"/>
 					</section>
 
-					<section data-background-image="img/esu2017/modelling.jpg" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/modelling.jpg" data-background-size="contain"/>
 					</section>
 
-					<section data-background-image="img/esu2017/db.png" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/db.png" data-background-size="contain"/>
 					</section>
 
 					<section>
 						<a href="http://boccacciocommedia.it">
-						<img src="img/esu2017/website.png"/>
+						<img src="images/esu2017/website.png"/>
 						</a>
 					</section>
 				</section>
