--- a/talks/index.html
+++ b/talks/index.html
@@ -32,7 +32,7 @@
 				<li><a href="codeCollation-unit2part2.html#/">Code and Collation workshop</a></li>
 			</ul>
 
-			<p>More talks at <a href="http://elenaspadini.com/presentations.html">elenaspadini.com/presentations</a></p>
+			<p>More talks at <a href="http://elenaspadini.com/presentations.html">elenaspadini.com/presentation<s/a></p>
 		</div>
 	</body>
 </html>
