--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -144,15 +144,11 @@
 					</section>
 
 					<section>
-						<iframe width="100%" height="600px" data-src="images/esu2017/table03.html"></iframe>
-					</section>
-
-					<section>
-						<img src="images/esu2017/bocc-conceptual-color10.png"/>
-					</section>
-
-					<section>
 						<img src="images/esu2017/table-presente.png"/>
+					</section>
+
+					<section>
+						<iframe width="100%" height="600px" data-src="images/esu2017/table03.html"></iframe>
 					</section>
 
 					<section>
@@ -213,9 +209,7 @@
 					</section>
 
 					<section>
-						<a href="http://boccacciocommedia.it">
-						<img src="images/esu2017/website.png"/>
-						</a>
+						<iframe src="http://boccacciocommedia.it" width="100%" height="650px"></iframe>
 					</section>
 				</section>
 				<!--  ### here ends the second big section ###  -->
@@ -233,7 +227,7 @@
 						<h2>To do</h2>
 						<ul>
 							<li>add variants</li>
-							<li>summarize the result through data visualizations</li>
+							<li>summarize the results through data visualizations</li>
 						</ul>
 					</section>
 
@@ -241,7 +235,7 @@
 						<h2>What I am learning</h2>
 						<ul>
 							<li>humanist + digital humanist = productive discussion</li>
-							<li>logistic issue should be considered</li>
+							<li>logistic issues should be considered</li>
 						</ul>
 					</section>
 				</section>
