small changes esu 2017

--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -209,7 +209,7 @@
 					</section>
 
 					<section>
-						<iframe src="http://boccacciocommedia.it" width="100%" height="650px"></iframe>
+						<a href="http://boccacciocommedia.it"><img src="images/esu2017/website.png" width="100%"/></img>
 					</section>
 				</section>
 				<!--  ### here ends the second big section ###  -->
