small changes esu 2017

--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -209,7 +209,7 @@
 					</section>
 
 					<section>
-						<a href="http://boccacciocommedia.it"><img src="images/esu2017/website.png" width="100%" target="_blank"/></img>
+						<a href="http://boccacciocommedia.it" target="_blank"><img src="images/esu2017/website.png" width="100%"/></a>
 					</section>
 				</section>
 				<!--  ### here ends the second big section ###  -->
