--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -1,16 +1,16 @@
-<!doctype html>
+
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
 		<title>ESU Leipzig 2017</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/reveal.css"/>
+		<link rel="stylesheet" href="css/theme/black.css"/>
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" href="lib/css/zenburn.css"/>
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -67,14 +67,14 @@
 					</section>
 
 					<section>
-						<img src="images/esu2017/edPetrocchi.jpg">
+						<img src="images/esu2017/edPetrocchi.jpg"/>
 					</section>
 
 					<section data-background-image="images/esu2017/tradizione.jpg" data-background-size="contain">
 					</section>
 
 					<section>
-						<img src="images/esu2017/bocc.jpg">
+						<img src="images/esu2017/bocc.jpg"/>
 						<p>Giovanni Boccaccio (1313-1375)</p>
 					</section>
 
@@ -196,21 +196,24 @@
 						<img src="images/esu2017/bocc-conceptual-color03.png"/>
 					</section>
 
-					<section data-background-image="images/esu2017/bocc-conceptual-color-completo.png" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/bocc-conceptual-color-completo.png" data-background-size="contain">
 					</section>
 
-					<section data-background-image="images/esu2017/bocc-conceptual-color-echo.png" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/bocc-conceptual-color-echo.png" data-background-size="contain">
 					</section>
 
-					<section data-background-image="images/esu2017/modelling.jpg" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/modelling.jpg" data-background-size="contain">
 					</section>
 
-					<section data-background-image="images/esu2017/db.png" data-background-size="contain"/>
+					<section data-background-image="images/esu2017/db.png" data-background-size="contain">
 					</section>
 
 					<section>
-						<a href="http://boccacciocommedia.it" target="_blank"><img src="images/esu2017/website.png" width="100%"/></a>
+						<a href="http://boccacciocommedia.it" target="_blank">
+							<img src="images/esu2017/website.png" width="100%"/>
+						</a>
 					</section>
+
 				</section>
 				<!--  ### here ends the second big section ###  -->
 
