small changes esu 2017

--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -46,6 +46,7 @@
 					<h2>Querying <span style="color: orange">variants</span>.<br/>La <i style="color: orange">Commedia</i> di Boccaccio</h2>
 					<br/><br/>
 					<p style="text-align: left">Leipzig ESU 2017</p>
+
 				</section>
 
 				<section>
@@ -156,8 +157,22 @@
 					</section>
 
 					<section>
-						<iframe width="100%" height="300px" data-src="images/esu2017/table02.html"></iframe>
-						<p>susbstitution | addition | morphological<br/>?</p>
+						<table style="color:white">
+							<tr>
+								<td>TO</td>
+								<td>RI</td>
+								<td>CH</td>
+								<td>ed. Petrocchi</td>
+							</tr>
+							<tr>
+								<td>nuovi</td>
+								<td>nuovo</td>
+								<td>nuovo</td>
+								<td>e per novi pensier cangia proposta,</td>
+							</tr>
+						</table>
+						<br/><br/>
+						<p style="color:orange">susbstitution | addition | morphological<br/>?</p>
 					</section>
 
 					<section>
@@ -165,8 +180,22 @@
 					</section>
 
 					<section>
-						<iframe width="100%" height="300px" data-src="images/esu2017/table02.html"></iframe>
-						<p>omission | addition | substitution<br/>?</p>
+						<table style="color:white">
+							<tr>
+								<td>TO</td>
+								<td>RI</td>
+								<td>CH</td>
+								<td>ed. Petrocchi</td>
+							</tr>
+							<tr>
+								<td>testa alta</td>
+								<td>testa alta</td>
+								<td>testa</td>
+								<td>con la test'alta e con rabbiosa fame,</td>
+							</tr>
+						</table>
+						<br/><br/>
+						<p style="color: orange">omission | addition | substitution<br/>?</p>
 					</section>
 
 					<section>
@@ -174,7 +203,7 @@
 					</section>
 
 					<section>
-						<table>
+						<table style="color:white">
 							<tr>
 								<td>TO</td>
 								<td>RI</td>
@@ -188,8 +217,8 @@
 								<td>coi gravi cittadin, col grande stuolo</td>
 							</tr>
 						</table>
-						<br/>
-						<p>morphological | echo | substitution<br/>?</p>
+						<br/><br/>
+						<p style="color:orange">morphological | echo | substitution<br/>?</p>
 					</section>
 
 					<section>
@@ -241,6 +270,19 @@
 							<li>logistic issues should be considered</li>
 						</ul>
 					</section>
+				</section>
+
+				<section>
+					<h4>Thank you!</h4>
+					<h4>Questions?</h4>
+					<span>&#9998;</span>
+					<p style="font-size: 1.2em"><a href="http://boccacciocommedia.it/">http://boccacciocommedia.it/</a></p>
+					<span>&#10000;</span>
+					<div style="font-size:0.7em">
+					<p>Slides: <a href="https://elespdn.github.io/talks/esu2017.html">https://elespdn.github.io/talks/esu2017.html</a></p>
+					<p><i>elena.spadini@unil.ch</i></p>
+					<p><a href="hhtp://elenaspadini.com" target="_blank">elenaspadini.com</a></p>
+					</div>
 				</section>
 
 
